--- a/filmes.html
+++ b/filmes.html
@@ -20,7 +20,7 @@
     </div>
       <div id="survey-form">
         <div class="quote3">
-          <p class="fontSize">Fale a palavra <b>"filme"</b> para receber uma sugestão de filme.</p><br><br>
+          <p class="fontSize">Fale a palavra <b>"filme"</b> para receber uma sugestão de filme.</p><br><br><br>
 
           <!--onde o resultado irá aparecer:-->
             <p id= "resultado"></p>
