--- a/mapapage.html
+++ b/mapapage.html
@@ -9,12 +9,12 @@
 
   <body class="bkg">
       <div class="container">
-        <h1 class="city" class="title">Siga o exemplo abaixo! <img src="img/arrow_down.png"></h1>
+        <h1 class="city" class="title">Mapa</h1>
       </div>
       <div id="survey-form">
         <div class="quote2">
           <div class="align">
-          <p class="fontSize">"<b><u>Mapa</u></b> São José dos Campos"</p>
+          <p id= "resultado">Fale o nome da cidade, estado ou país!</p>
         </div>
 
         </div>
