--- a/docpage2.html
+++ b/docpage2.html
@@ -65,7 +65,6 @@
         <header class="title1">Dicas de uso</header>
          <p>Todas as funcionalidades estão bem explicadas em suas páginas porém algumas conseguem fazer ainda mais!</p>
          <ul>
-           <li>Função Mapa, ao ínves de informar uma cidade, estado ou país tente informar um C.E.P. ou um local famoso;</li>
            <li>Voltar, fale voltar a qualquer momento para ser redirecionado até noss página de funcionalidades;</li>
            <li>Fechar, fale fechar para fechar qualquer página aberta pela assistente;</li>
            <li>Função Documento, é uma funcionalidade simples porém pode evitar muita dor de cabeça na hora da viagem aeroportuária;</li>
@@ -77,7 +76,7 @@
         <header class="title1">Exemplos de utilização</header>
         <ul>
           <li>Calculadora, "10 dólar real" para buscar o valor de 10 dólares para real;</li>
-          <li>Mapa, "São José dos Campos" ou para ser mais preciso "Cidade São José dos Campos";</li>
+          <li>Mapa, "São José dos Campos";</li>
           <li>Clima, apenas clique na caixa de diálogo aberta pelo navegador para dar permissão para nossa assistente procurar sua localização;</li>
           <li>Posição, fale a frase chave "me encontre" e dê permissão para a nossa assistente calcular sua localização;</li>
           <li>Documento, caso tenha dúvidas repita "documento" e a assistente o redirecionará para a página da ANAC;</li>
