Update04. Alteração função mapa.

--- a/mapapage.html
+++ b/mapapage.html
@@ -9,14 +9,14 @@
 
   <body class="bkg">
       <div class="container">
-        <h1 class="city" class="title">Mapa</h1>
+        <h1 class="city" class="title">Siga o exemplo abaixo! <img src="img/arrow_down.png"></h1>
       </div>
       <div id="survey-form">
         <div class="quote2">
           <div class="align">
-          <p id= "resultado">Fale o nome da cidade, estado ou país!</p>
+          <p class="fontSize">"<b><u>Mapa</u></b> São José dos Campos"</p>
         </div>
-        
+
         </div>
         <div class="back">
           <p>Diga <strong>"voltar"</strong> para retornar à página de comandos.</p>
