--- a/docpage2.html
+++ b/docpage2.html
@@ -77,7 +77,7 @@
         <header class="title1">Exemplos de utilização</header>
         <ul>
           <li>Calculadora, "10 dólar real" para buscar o valor de 10 dólares para real;</li>
-          <li>Mapa, "São Paulo" ou para ser mais preciso "Cidade de São Paulo", cuidado para a função ser ágil optamos por não adicionar uma palavra chave então qualquer palavra dita será procurada;</li>
+          <li>Mapa, "Mapa São José dos Campos" ou para ser mais preciso "Mapa Cidade São José dos Campos", cuidado é essencial começar com "mapa";</li>
           <li>Clima, apenas clique na caixa de diálogo aberta pelo navegador para dar permissão para nossa assistente procurar sua localização;</li>
           <li>Posição, fale a frase chave "me encontre" e dê permissão para a nossa assistente calcular sua localização;</li>
           <li>Documento, caso tenha dúvidas repita "documento" e a assistente o redirecionará para a página da ANAC;</li>
