Update07. Fix de typos e comentários adicionados.

--- a/conversaopage.html
+++ b/conversaopage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <htm>
   <head>
-    <title>Assistente de Viagem - Conversor de Moeda</title>
+    <title>Função Calculadora</title>
     <!--apenas um placeholder pra testar durante o desenvolvimento da função-->
 
     <!--jquery é necessário para pegar os dados da api no método que uso
@@ -54,7 +54,7 @@
 
           <!--onde o resultado irá aparecer:-->
             <p id= "resultado"></p>
-      
+
         </div>
 
         <div class="back">
