--- a/docpage.html
+++ b/docpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "pt-br">
   <head>
-    <title>Página Documentos</title>
+    <title>Função Documentos</title>
     <link rel="stylesheet" type="text/css" href="css/style4.css">
     <meta charset = "utf-8" />
     <script src= "js/maisdocs.js"></script>
