--- a/filmes.html
+++ b/filmes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <htm>
   <head>
-    <title>Assistente de Viagem - Conversor de Moeda</title>
+    <title>Função Filme</title>
     <!--apenas um placeholder pra testar durante o desenvolvimento da função-->
 
     <!--jquery é necessário para pegar os dados da api no método que uso
@@ -14,7 +14,6 @@
   </head>
 
   <body class="bkg">
-    <!--seleçao das moedas e o valor-->
     <div class="container">
       <h1 class="title">Sugestão de Filmes:</h1>
     </div>
