--- a/homepage.html
+++ b/homepage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang = "pt-br">
   <head>
-    <title>Assistente</title>
+    <title>Assistente para viagens - NUNA</title>
     <meta charset = "utf-8" />
     <link rel="stylesheet" type="text/css" href="css/style2.css">
     <script src="js/vozhomepage.js"></script>
