--- a/perdidopage.html
+++ b/perdidopage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>Assistente de Viagem - Clima</title>
+    <title>Função Localização</title>
     <meta charset = "utf-8" />
     <script src= "js/voltar.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style3.css">
