--- a/climapage.html
+++ b/climapage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>Assistente de Viagem - Clima</title>
+    <title>Função Clima</title>
     <meta charset = "utf-8" />
     <script src= "js/clima.js"></script>
     <script src= "js/voltar.js"></script>
