--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>Seu Assistente de Viagens</title>
+    <title>NUNA, a sua Assistente de Viagens</title>
     <meta charset = "utf-8" />
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
