--- a/rotaspage.html
+++ b/rotaspage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>Assistente de Viagem - Mapa</title>
+    <title>Função Trajeto</title>
     <meta charset = "utf-8" />
     <script src= "js/rota.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style3.css">
