--- a/filmes.html
+++ b/filmes.html
@@ -2,9 +2,7 @@
 <htm>
   <head>
     <title>Função Filme</title>
-    <!--apenas um placeholder pra testar durante o desenvolvimento da função-->
-
-    <!--jquery é necessário para pegar os dados da api no método que uso
+    <!--jquery é necessário para pegar os dados da api no método que escolhi usar
     jquery hosteado pela google, assim não precisa baixar nada-->
     <script src= "https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/filmes.js"></script>
