--- a/conversaopage.html
+++ b/conversaopage.html
@@ -2,9 +2,8 @@
 <htm>
   <head>
     <title>Função Calculadora</title>
-    <!--apenas um placeholder pra testar durante o desenvolvimento da função-->
 
-    <!--jquery é necessário para pegar os dados da api no método que uso
+    <!--jquery é necessário para pegar os dados da api no método que escolhi usar
     jquery hosteado pela google, assim não precisa baixar nada-->
     <script src= "https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src=js/moedas.js></script>
@@ -62,7 +61,7 @@
         </div>
       </div>
 
-
+    <!--script para funcionar manualmente-->
     <script>
     function conversao() {
       var script_moeda1 = document.getElementById("moeda1").value;
