--- a/aeroportospage.html
+++ b/aeroportospage.html
@@ -2,9 +2,8 @@
 <htm>
   <head>
     <title>Função Aeroporto</title>
-    <!--apenas um placeholder pra testar durante o desenvolvimento da função-->
 
-    <!--jquery é necessário para pegar os dados da api no método que uso
+    <!--jquery é necessário para pegar os dados da api no método que escolhi usar
     jquery hosteado pela google, assim não precisa baixar nada-->
     <script src= "https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src=js/aeroportos.js></script>
@@ -13,7 +12,6 @@
   </head>
 
   <body class="bkg">
-    <!--seleçao das moedas e o valor-->
     <div class="container">
       <h1 class="title">Lista de Aeroportos:</h1>
     </div>
